Updated index and style files

--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
 	<article id="about">
 		<section id="overview" class="container">
 			<h3>Who I Am</h3>
-			<p style="text-align:center;"><img src="avatar.jpg" alt="avatar" id="avatar" align="middle"></p>
+			<p style="text-align:center;"><img src="images/avatar.jpg" alt="avatar" id="avatar" align="middle"></p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</section>	
 			
 		<section id="services" class="container">
 			<h3>Services</h3>
 			<div class="service-category">	
-				<img src="brush.png" alt="art_picture" class="service-image" align="middle">
+				<img src="images/brush.png" alt="art_picture" class="service-image" align="middle">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 			<div class="service-category">
-				<img src="monitor.png" alt="computer" class="service-image" align="middle">
+				<img src="images/monitor.png" alt="computer" class="service-image" align="middle">
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</section>
@@ -83,28 +83,28 @@
 			</section>
 			<section id="gallery">
 				<div class="gallery-img">
-					<img src="pf1.png" alt="image-1">
+					<img src="images/pf1.png" alt="image-1">
 				</div>
 				<div class="gallery-img">
-					<img src="pf2.png" alt="image-2">
+					<img src="images/pf2.png" alt="image-2">
 				</div>
 				<div class="gallery-img">
-					<img src="pf3.png" alt="image-3">
+					<img src="images/pf3.png" alt="image-3">
 				</div>
 				<div class="gallery-img">
-					<img src="pf4.png" alt="image-4">
+					<img src="images/pf4.png" alt="image-4">
 				</div>
 				<div class="gallery-img">
-					<img src="pf5.png" alt="image-5">
+					<img src="images/pf5.png" alt="image-5">
 				</div>
 				<div class="gallery-img">
-					<img src="pf6.png" alt="image-6">
+					<img src="images/pf6.png" alt="image-6">
 				</div>		
 				<div class="gallery-img">
-					<img src="pf7.png" alt="image-7">
+					<img src="images/pf7.png" alt="image-7">
 				</div>		
 				<div class="gallery-img">
-					<img src="pf8.png" alt="image-8">
+					<img src="images/pf8.png" alt="image-8">
 				</div>	
 			</section>
 		</div>
@@ -118,15 +118,15 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<div id="contact-mode">
 					<div class="mode-category">
-						<img class="contact-icon" src="map.png" alt="gps-image">
+						<img class="contact-icon" src="images/map.png" alt="gps-image">
 						<p class="contact-details">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p><br/>
 					</div>
 					<div class="mode-category">
-						<img class="contact-icon" src="telephone.png" alt="phone">
+						<img class="contact-icon" src="images/telephone.png" alt="phone">
 						<p class="contact-details">1234567890</p><br/>
 					</div>
 					<div class="mode-category">			
-						<img class="contact-icon" src="email.png" alt="email">
+						<img class="contact-icon" src="images/email.png" alt="email">
 						<p class="contact-details">mail@personalwebsite.com</p>	
 					</div>
 				</div>
@@ -151,12 +151,12 @@
 			<p>Copyright © 2015 <em>Simply Professional Theme</em> by Mikah Razon.</p>
 			<div id="social-media">
 				<ul id="social">
-					<li><img src="facebook2.png" alt="facebook" class="media-icons"></li>
-					<li><img src="linkedin2.png" alt="linkedIn" class="media-icons"></li>
-					<li><img src="twitter3.png" alt="twitter" class="media-icons"></li>
-					<li><img src="dribbble2.png" alt="dribbble" class="media-icons"></li>
-					<li><img src="behance2.png" alt="behance" class="media-icons"></li>
-					<li><img src="pinterest2.png" alt="pinterest" class="media-icons"></li>					
+					<li><img src="images/facebook2.png" alt="facebook" class="media-icons"></li>
+					<li><img src="images/linkedin2.png" alt="linkedIn" class="media-icons"></li>
+					<li><img src="images/twitter3.png" alt="twitter" class="media-icons"></li>
+					<li><img src="images/dribbble2.png" alt="dribbble" class="media-icons"></li>
+					<li><img src="images/behance2.png" alt="behance" class="media-icons"></li>
+					<li><img src="images/pinterest2.png" alt="pinterest" class="media-icons"></li>					
 				</ul>
 			</div>
 		</div>
